# BACKEND/23_StockAPI/src/controllers/user.js
@@ -5,6 +5,9 @@
 // User Controllers:
 
 const User = require("../models/user");
+const Token = require("../models/token");
+const jwt = require("jsonwebtoken");
+const passwordEncrypt = require("../helpers/passwordEncrypt");
 
 module.exports = {
   list: async (req, res) => {
@@ -47,7 +50,52 @@ module.exports = {
             }
         */
 
-    const data = await User.create(req.body);
+    // Erkan hocamizin istegi uzerine, kullanici register oldugunda login olmus olsun.
+
+    const user = await User.create(req.body);
+
+    /* SIMPLE TOKEN */
+    const tokenData = await Token.create({
+      userId: user._id,
+      token: passwordEncrypt(user._id + Date.now()),
+    });
+    /* SIMPLE TOKEN */
+
+    /* JWT */
+
+    // AccessToken:
+    const accessData = {
+      _id: user._id,
+      username: user.username,
+      email: user.email,
+      isActive: user.isActive,
+      isAdmin: user.isAdmin,
+    };
+
+    const accessToken = jwt.sign(accessData, process.env.ACCESS_KEY, {
+      expiresIn: "30m",
+    });
+
+    // RefreshToken:
+    const refreshData = {
+      _id: user._id,
+      password: user.password,
+    };
+    // Convert to JWT
+    const refreshToken = jwt.sign(refreshData, process.env.REFRESH_KEY, {
+      expiresIn: "1d",
+    });
+    /* JWT */
+
+    res.send({
+      error: false,
+      token: tokenData.token,
+      bearer: {
+        access: accessToken,
+        refresh: refreshToken,
+      },
+      user,
+    });
 
     res.status(201).send({
       error: false,
